<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".timphong.checkout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frameLayoutCheckout"
        android:layout_width="412dp"
        android:layout_height="150dp"
        android:foreground="#CAFFA726"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

    </FrameLayout>

    <DatePicker
        android:id="@+id/CheckOutDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:background="@drawable/bogoclich"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/frameLayoutCheckout" />

    <TextView
        android:id="@+id/textViewCOdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/check_out_date"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonCIdate"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/bobutton"
        android:text="@string/ok"
        android:textColor="#FDFDFD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonFindeCO"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="14dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_findroom4_foreground" />

    <ImageButton
        android:id="@+id/imageButtonOrderCO"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="19dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonAccountCI"
        app:layout_constraintStart_toEndOf="@+id/imageButtonFindeCO"
        app:srcCompat="@drawable/ic_order_foreground" />

    <ImageButton
        android:id="@+id/imageButtonAccountCI"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="14dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_profile_foreground" />

    <TextView
        android:id="@+id/textViewFindRoomCO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginBottom="2dp"
        android:text="@string/t_m_ki_m"
        android:textAlignment="center"
        android:textColor="#1BA3F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewDaDatCI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewAccountCI"
        app:layout_constraintStart_toEndOf="@+id/textViewFindRoomCO" />

    <TextView
        android:id="@+id/textViewAccountCI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="2dp"
        android:text="@string/t_i_kho_n"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>